PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/CategorieDeCompte__c.field-meta.xml
<CustomField>
    <fullName>CategorieDeCompte__c</fullName>
    <formula>IF(ISPICKVAL(Typologie_de_compte__c,&apos;Grand compte&apos;),IMAGE(&apos;https://aptiskills--c.visualforce.com/resource/1670422661000/DiffDesComptesGrand?&apos;,&apos;Grand compte&apos;),
IF(ISPICKVAL(Typologie_de_compte__c,&apos;Compte standard&apos;),IMAGE(&quot;https://aptiskills--c.visualforce.com/resource/1670422710000/DiffDesComptesStandard?&quot;,&apos;Compte standard&apos;),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catégorie de compte</label>
    <type>Text</type>
</CustomField>