PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Code_NAF_ou_APE__c.field-meta.xml
<CustomField>
    <fullName>Code_NAF_ou_APE__c</fullName>
    <label>Code NAF ou APE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>