PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Convention_collective__c.field-meta.xml
<CustomField>
    <fullName>Convention_collective__c</fullName>
    <label>Convention collective</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>