PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Date_de_cloture_dexercice_comptable__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cloture_dexercice_comptable__c</fullName>
    <label>Date de clôture d&apos;exercice comptable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>