PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Date_de_creation_de_letablissement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_creation_de_letablissement__c</fullName>
    <label>Date de création de l&apos;établissement</label>
    <type>Date</type>
</CustomField>