PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Domaine_dactivite__c.field-meta.xml
<CustomField>
    <fullName>Domaine_dactivite__c</fullName>
    <label>Domaine d’activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>