PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Etablissement_siege__c.field-meta.xml
<CustomField>
    <fullName>Etablissement_siege__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Établissement siège</label>
    <type>Checkbox</type>
</CustomField>