PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Forme_dexercice__c.field-meta.xml
<CustomField>
    <fullName>Forme_dexercice__c</fullName>
    <label>Forme d&apos;exercice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>