PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Forme_juridique__c.field-meta.xml
<CustomField>
    <fullName>Forme_juridique__c</fullName>
    <label>Forme juridique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>