PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Groupe__c.field-meta.xml
<CustomField>
    <fullName>Groupe__c</fullName>
    <description>champ qui sépcifie le groupe de l&apos;entreprise sur la fiche client</description>
    <label>Groupe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>