PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Inscription_au_RNE__c.field-meta.xml
<CustomField>
    <fullName>Inscription_au_RNE__c</fullName>
    <label>Inscription au RNE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>