PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/IsCompteParent__c.field-meta.xml
<CustomField>
    <fullName>IsCompteParent__c</fullName>
    <formula>ISBLANK( ParentId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Compte Parent</label>
    <type>Checkbox</type>
</CustomField>