PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/isFromLead__c.field-meta.xml
<CustomField>
    <fullName>isFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFromLead</label>
    <type>Checkbox</type>
</CustomField>