PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Objet_social__c.field-meta.xml
<CustomField>
    <fullName>Objet_social__c</fullName>
    <label>Activité principale déclarée</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>