PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Date_de_Calcul__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Date_de_Calcul__c</fullName>
    <label>Scoring Date de Calcul</label>
    <length>255</length>
    <type>Text</type>
</CustomField>