PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Financier_C_F_Nettes__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Financier_C_F_Nettes__c</fullName>
    <label>Scoring Financier CF Nettes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>