PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Financier_Dettes_Fiscales_CA__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Financier_Dettes_Fiscales_CA__c</fullName>
    <label>Scoring Financier Dettes Fiscales CA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>