PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Financier_Fonds_de_roulement__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Financier_Fonds_de_roulement__c</fullName>
    <label>Scoring Financier Fonds de roulement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>