PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Financier_Note__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Financier_Note__c</fullName>
    <label>Scoring Financier Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>