PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Financier_Score__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Financier_Score__c</fullName>
    <label>Scoring Financier Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>