PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Scoring_Financier_Tresorerie_nette__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Financier_Tresorerie_nette__c</fullName>
    <label>Scoring Financier Trésorerie nette</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>