PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/tranche_effectif__c.field-meta.xml
<CustomField>
    <fullName>tranche_effectif__c</fullName>
    <label>Tranche Effectif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>