PappersConnecterSalesforce/force-app/main/default/objects/Account/fields/Typologie_de_compte__c.field-meta.xml
<CustomField>
    <fullName>Typologie_de_compte__c</fullName>
    <label>Typologie de compte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grand compte</fullName>
            </value>
            <value>
                <fullName>Compte standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>