PappersConnecterSalesforce/force-app/main/default/objects/Account/validationRules/vr_ne_pas_creer_account.validationRule-meta.xml
<ValidationRule>
    <fullName>vr_ne_pas_creer_account</fullName>
    <active>true</active>
    <errorConditionFormula>and(isnew(), isFromLead__c )</errorConditionFormula>
    <errorMessage>vous ne pouvez pas créer un compte depuis la conversion d&apos;un prospect.</errorMessage>
</ValidationRule>